google font added, services modified

--- a/medsev/index-2.html
+++ b/medsev/index-2.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="zxx">
+<html lang="en">
 
 <head>
     <meta charset="UTF-8">
@@ -28,9 +28,12 @@
     <!-- Wow CSS -->
     <link rel="stylesheet" href="assets/css/animate.css">
 
+    <!-- Google font -->
+    <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@400;500;700&family=Source+Sans+Pro:wght@200;300;400&display=swap" rel="stylesheet">
+
     <!-- Style CSS -->
     <link rel="stylesheet" href="assets/css/style.css">
-    
+
     <!-- Responsive CSS -->
     <link rel="stylesheet" href="assets/css/responsive.css">
 
@@ -42,7 +45,7 @@
 <body>
 
     <!-- Preloader -->
-    <div class="loader">
+    <!-- <div class="loader">
         <div class="d-table">
             <div class="d-table-cell">
                 <div class="spinner">
@@ -51,7 +54,7 @@
                 </div>
             </div>
         </div>
-    </div>
+    </div> -->
     <!-- End Preloader -->
 
     <!-- Header Top -->
@@ -309,7 +312,7 @@
                 <div class="col-lg-6 p-0">
                     <div class="welcome-item welcome-right">
                         <div class="section-title-two">
-                            <span>About Us</span>
+                            <span class="sub-heading">About Us</span>
                             <h2>Welcome to NIFLC. We have...</h2>
                         </div>
                         <ul>
@@ -407,7 +410,7 @@
     <section class="services-area pb-70">
         <div class="container">
             <div class="section-title-two">
-                <span>Services</span>
+                <span class="sub-heading">Services</span>
                 <h2>Our Clinic Services</h2>
             </div>
             <div class="row">
@@ -615,14 +618,15 @@
                             <div class="d-table-cell">
                                 <div class="container">
                                     <div class="video-item">
-                                        <a href="#">
+                                        <!-- <a href="#">
                                             <i class="icofont-ui-play"></i>
-                                        </a>
-                                        <div class="video-content">
+                                        </a> -->
+                                        <iframe width="100%" height="560" src="https://www.youtube.com/embed/d0lblhcntSI" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+                                        <!-- <div class="video-content">
                                             <h3>About Our Pharmacy</h3>
                                             <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Quis ipsum suspendisse ultrices gravida. Risus commodo viverra maecenas accumsan lacus
                                                 vel facilisis. </p>
-                                        </div>
+                                        </div> -->
                                     </div>
                                 </div>
                             </div>
@@ -635,14 +639,15 @@
                             <div class="d-table-cell">
                                 <div class="container">
                                     <div class="video-item">
-                                        <a href="#">
+                                        <!-- <a href="#">
                                             <i class="icofont-ui-play"></i>
-                                        </a>
-                                        <div class="video-content">
+                                        </a> -->
+                                        <iframe width="100%" height="560" src="https://www.youtube.com/embed/ZsS6BnmArXE" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+                                        <!-- <div class="video-content">
                                             <h3>Our reasearch center and lab </h3>
                                             <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Quis ipsum suspendisse ultrices gravida. Risus commodo viverra maecenas accumsan lacus
                                                 vel facilisis. </p>
-                                        </div>
+                                        </div> -->
                                     </div>
                                 </div>
                             </div>
@@ -655,14 +660,15 @@
                             <div class="d-table-cell">
                                 <div class="container">
                                     <div class="video-item">
-                                        <a href="#">
+                                        <!-- <a href="#">
                                             <i class="icofont-ui-play"></i>
-                                        </a>
-                                        <div class="video-content">
+                                        </a> -->
+                                        <iframe width="100%" height="560" src="https://www.youtube.com/embed/2bPNYqz3qao" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+                                        <!-- <div class="video-content">
                                             <h3>CCU & ICU</h3>
                                             <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Quis ipsum suspendisse ultrices gravida. Risus commodo viverra maecenas accumsan lacus
                                                 vel facilisis. </p>
-                                        </div>
+                                        </div> -->
                                     </div>
                                 </div>
                             </div>
@@ -719,7 +725,7 @@
     <section class="doctors-area pt-100">
         <div class="container">
             <div class="section-title-two">
-                <span>Doctors</span>
+                <span class="sub-heading">Doctors</span>
                 <h2>Meet Our Doctors </h2>
             </div>
             <div class="row">
@@ -889,7 +895,7 @@
     <section class="blog-area pt-100 pb-70">
         <div class="container">
             <div class="section-title-two">
-                <span>Blogs</span>
+                <span class="sub-heading">Blogs</span>
                 <h2>Our latest blogs</h2>
             </div>
             <div class="row">
